Add text replacement functionality to tables

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -40,17 +40,18 @@
             "statResLabel": "Res",
 
             "ratingFiltersLabel": "Rating Filters",
-            "ratingCpLabel": "Cp",
-            "ratingHpSLabel": "HpS",
-            "ratingEhpLabel": "Ehp",
-            "ratingEhpSLabel": "EhpS",
+            "ratingCombatPowerLabel": "Cp",
+            "ratingHpSpeedLabel": "HpS",
+            "ratingEffectiveHpLabel": "Ehp",
+            "ratingEffectiveHpSpeedLabel": "EhpS",
             "ratingDmgLabel": "Dmg",
-            "ratingDmgSLabel": "DmgS",
-            "ratingMcdLabel": "Mcd",
-            "ratingMcdSLabel": "McdS",
-            "ratingDmgHLabel": "DmgH",
-            "ratingScoreLabel": "Score",
-            "ratingUpgLabel": "Upg",
+            "ratingDmgSpeedLabel": "DmgS",
+            "ratingMaxCritDmgLabel": "Mcd",
+            "ratingMaxCritDmgSpeedLabel": "McdS",
+            "ratingDmgHealthLabel": "DmgH",
+            "ratingGearScoreLabel": "Score",
+            "ratingNumGearsToUpgradeLabel": "Upg",
+            "availableActionsLabel": "Actions",
 
             "substatPriorityLabel": "Substat Priority",
             "substatAtkLabel": "Atk",
@@ -69,7 +70,9 @@
             "inputBootsStatDropdownPlaceholder": "Boots",
 
             "statCritChanceLabel": "Crit Chance",
+            "statCritChancePercentLabel": "Crit Chance %",
             "statCritDamageLabel": "Crit Damage",
+            "statCritDmgPercentLabel": "Crit Dmg %",
             "statAttackPercentLabel": "Attack %",
             "statFlatAttackLabel": "Attack",
             "statHealthPercentLabel": "Health %",
@@ -77,8 +80,10 @@
             "statDefensePercentLabel": "Defense %",
             "statFlatDefenseLabel": "Defense",
             "statEffectivenessLabel": "Effectiveness",
+            "statEffectivenessPercentLabel": "Effectiveness %",
             "statEffectResistanceLabel": "Effect Resistance",
             "statEffectResistLabel": "Effect Resist",
+            "statEffectResistPercentLabel": "Effect Resist %",
             "statSpeedLabel": "Speed",
 
             "gearSetsLabel": "Sets",
@@ -133,6 +138,32 @@
             "gearTableLabel": "Gear Table",
             "numEquipmentSelectedLabel": "Selected: ",
 
+            "gearTableSetLabel": "Set",
+            "gearTableTypeLabel": "Gear",
+            "gearTableRankLabel": "Rank",
+            "gearTableLevelLabel": "Level",
+            "gearTableEnhanceLevelLabel": "Enhance",
+            "gearTableMainStatLabel": "Main",
+            "gearTableMainStatValueLabel": "Value",
+            "gearTableAtkPercentLabel": "Atk%",
+            "gearTableFlatAtkLabel": "Atk",
+            "gearTableSpdLabel": "Spd",
+            "gearTableCritRateLabel": "Cr",
+            "gearTableCritDmgLabel": "Cd",
+            "gearTableHpPercentLabel": "Hp%",
+            "gearTableFlatHpLabel": "Hp",
+            "gearTableDefPercentLabel": "Def%",
+            "gearTableFlatDefLabel": "Def",
+            "gearTableEffLabel": "Eff",
+            "gearTableEffResLabel": "Res",
+            "gearTableGearScoreLabel": "Score",
+            "gearTableDpsScoreLabel": "dScore",
+            "gearTableSupportScoreLabel": "sScore",
+            "gearTableCombatScoreLabel": "cScore",
+            "gearTableEquippedByLabel": "Equipped",
+            "gearTableLockedLabel": "Locked",
+            "gearTableDuplicateLabel": "Duplicate",
+
             "gearActionsLabel": "Actions",
             "equipEditGearButtonText": "Equip / Edit Item",
             "reforgeGearButtonText": "Reforge Item",
@@ -158,6 +189,13 @@
             "addNewHeroButtonText": "Add New Hero",
             "clearFilterButtonText": "Clear",
             "useReforgeStatsToggleText": "Use reforged stats",
+
+            "heroTableIconLabel": "Icon",
+            "heroTableElementLabel": "Elem",
+            "heroTableClassLabel": "Class",
+            "heroTableNameLabel": "Name",
+
+            "buildsTableNameLabel": "Build Name",
 
             "addBonusStatsButtonText": "Add Bonus Stats",
             "removeHeroButtonText": "Remove Hero",
