--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -12,7 +12,10 @@
 
             "optimizerTabName": "Optimizer",
             "heroLabel": "Hero",
+            "heroDropdownTooltip": "<p>Select the hero you want to optimize.</p><p><b>{startButtonText} - </b> Start a search using the current settings.</p><p><b>{filterButtonText} - </b> Keep the current optimization results, but re-apply the stat and rating filters. Useful for narrowing down a search.</p><p><b>{cancelButtonText} - </b> Attempts to cancel an ongoing search. This won't always cancel immediately, if the process is busy.</p><p><b>{filterResetButtonText} - </b> Resets all optimization filters to their default values.</p>",
             "inputHeroAddDropdownPlaceholder": "Hero",
+            "dropdownSelectAllOptionLabel": "[Select All]",
+            "dropdownNoMatchesFoundOptionLabel": "No Matches Found",
             "startButtonText": "Start",
             "filterButtonText": "Filter",
             "cancelButtonText": "Cancel",
@@ -20,8 +23,10 @@
 
             "statsLabel": "Stats",
             "clearSectionText": "clear",
+            "statPreviewTooltip": "<p>The left side shows your unit's current stats. The middle shows the stats after the stat change. The right side shows the difference.</p>",
 
             "optionsLabel": "Options",
+            "optimizationOptionsTooltip": "<p><b>{useReforgeStatsOption} - </b> Predict the reforged stats on +15 level 85 gear to use in the search. Warning: the substat prediction is not always accurate.</p><p><b>{useOnlyMaxGearOption} - </b> Search only for builds that contain all +15 and reforged gear.</p><p><b>{useLockedGearOption} - </b> Allow locked items in the search.</p><p><b>{useEquippedGearOption} - </b> Allow items equipped by other heroes in the search.</p><p><b>{keepCurrentGearOption} - </b> Keep any existing gears on the unit, and search only for the missing gear pieces.</p><p><b>{optionsExcludeGearFromDropdownPlaceholder} - </b> Ignores the dropdown selected units' currently equipped gear in optimization. Only works when \"{useEquippedGearOption}\" is checked.<p>",
             "useReforgeStatsOption": "Use reforged stats",
             "useOnlyMaxGearOption": "Only maxed gear",
             "useLockedGearOption": "Locked items",
@@ -30,6 +35,7 @@
             "optionsExcludeGearFromDropdownPlaceholder": "Exclude equipped",
 
             "statFiltersLabel": "Stat Filters",
+            "statFiltersTooltip": "<p>You can manually input (a range of) specific substat values to filter your optimization results by. Left column is min (inclusive) and right column is max (inclusive).</p>",
             "statAtkLabel": "Atk",
             "statHpLabel": "Hp",
             "statDefLabel": "Def",
@@ -40,6 +46,7 @@
             "statResLabel": "Res",
 
             "ratingFiltersLabel": "Rating Filters",
+            "ratingFiltersTooltip": "<p>You can manually input (a range of) different ratings to filter your optimization results results by. Ratings are stats that aren't seen in the game, but are useful for comparing builds. Left column is min (inclusive) and right column is max (inclusive).</p><p><b>{ratingCombatPowerLabel} - </b> Combat power, as you would find it ingame, but without factoring in skill enhances. Useful for world boss units.</p><p><b>{ratingHpSpeedLabel} - </b> Health * Speed rating, for comparing fast/health builds, disregaring defense. Example health scaling units: Krau, Fceci.</p><p><b>{ratingEffectiveHpLabel} - </b> Effective Health, for comparing how much damage a unit can take. Formula: HP * (Defense/300 + 1).</p><p><b>{ratingEffectiveHpSpeedLabel} - </b> Effective Health * Speed rating, for comparing fast/tanky builds.</p><p><b>{ratingDmgLabel} - </b> Average damage rating, measures how much damage your unit will deal on average, factoring in crit chance & damage.</p><p><b>{ratingDmgSpeedLabel} - </b> Average Damage * Speed rating, measures average damage vs speed.</p><p><b>{ratingMaxCritDmgLabel} - </b> Max crit damage rating, measures damage at 100% crit chance. Example units: Arby, JKise.</p><p><b>{ratingMaxCritDmgSpeedLabel} - </b> Max crit damage * Speed rating, measures damage at 100% crit chance vs speed.</p><p><b>{ratingDmgHealthLabel} - </b> Damage * Health rating, average damage rating scaled by your unit's health. Useful for HP scaling bruisers.</p><p><b>{ratingGearScoreLabel} - </b> Sum of gear score of all 6 pieces.</p><p><b>{ratingNumGearsToUpgradeLabel} - </b> Number items to upgrade (including reforges and enhances).</p>",
             "ratingCombatPowerLabel": "Cp",
             "ratingHpSpeedLabel": "HpS",
             "ratingEffectiveHpLabel": "Ehp",
@@ -54,6 +61,7 @@
             "availableActionsLabel": "Actions",
 
             "substatPriorityLabel": "Substat Priority",
+            "substatPriorityTooltip": "<p><b>Please read before using: </b> This is the most useful filter. However, incorrect use can potentially exclude good or better results from the search.</p><p>Assign a priority to each substat type from -1 to 3. This will go through every single piece of gear, and calculates the # of max rolls of each stat. The # of rolls is then multiplied by the stat priority you chose. It adds up all of the stat scores for a gear, and sorts your gear by their highest substat score.</p><p>After that, it chooses only the Top X% of scored gears to use for the search.\nFor example, if you select {substatAtkLabel}: 3 / {substatCrLabel}: 3 / {substatCdLabel}: 3 / Top 40%, this will use only the best 40% of your gears sorted by {substatAtkLabel} / {substatCrLabel} / {substatCdLabel} substats.</p><p>This filter does nothing when {topResultPercentageLabel} is 100.</p><p>In general, top 40-50% is be a good range to start with. Adjust the {topResultPercentageLabel} lower/higher accordingly based on your own gear and the results you get. Lowering the percent narrows down your best gears to make the search faster, but going too low will exclude possible good builds and will end up being less optimal.</p><p>This works best when accessory stats and set options are selected.</p><p>",
             "substatAtkLabel": "Atk",
             "substatHpLabel": "Hp",
             "substatDefLabel": "Def",
@@ -65,6 +73,7 @@
             "topResultPercentageLabel": "Top %",
 
             "accessoryMainStatsLabel": "Accessory Main Stats",
+            "accessoryMainStatsTooltip": "<p>Choose the desired main stats for accessories. Multiple options can be selected per slot.</p>",
             "inputNecklaceStatDropdownPlaceholder": "Necklace",
             "inputRingStatDropdownPlaceholder": "Ring",
             "inputBootsStatDropdownPlaceholder": "Boots",
@@ -73,12 +82,15 @@
             "statCritChancePercentLabel": "Crit Chance %",
             "statCritDamageLabel": "Crit Damage",
             "statCritDmgPercentLabel": "Crit Dmg %",
+            "statAttackLabel": "Attack",
             "statAttackPercentLabel": "Attack %",
-            "statFlatAttackLabel": "Attack",
+            "statFlatAttackLabel": "Flat Attack",
+            "statHealthLabel": "Health",
             "statHealthPercentLabel": "Health %",
-            "statFlatHealthLabel": "Health",
+            "statFlatHealthLabel": "Flat Health",
+            "statDefenseLabel": "Defense",
             "statDefensePercentLabel": "Defense %",
-            "statFlatDefenseLabel": "Defense",
+            "statFlatDefenseLabel": "Flat Defense",
             "statEffectivenessLabel": "Effectiveness",
             "statEffectivenessPercentLabel": "Effectiveness %",
             "statEffectResistanceLabel": "Effect Resistance",
@@ -87,11 +99,13 @@
             "statSpeedLabel": "Speed",
 
             "gearSetsLabel": "Sets",
+            "gearSetsTooltip": "<p>Choose the desired gear sets. Multiple options can be selected per slot. The first slot must be either only 4 piece or 2 piece sets.</p>",
             "inputSet1DropdownPlaceholder": "4 or 2 piece sets",
             "inputSet2DropdownPlaceholder": "2 piece sets",
             "inputSet3DropdownPlaceholder": "2 piece sets",
 
             "gearSetExclusionLabel": "Exclude",
+            "gearSetExclusionTooltip": "<p>Choose any sets you don't want included in the search.</p>",
             "inputExcludeSetDropdownPlaceholder": "Exclude sets",
             "gear4PieceSetLabel": "4 Piece",
             "gear2PieceSetLabel": "2 Piece",
@@ -113,7 +127,8 @@
             "setResistLabel": "Resist",
             "setUnityLabel": "Unity",
 
-            "filteredResultsLabel": "Filter/Search Details",
+            "filterDetailsLabel": "Filter/Search Details",
+            "filterDetailsTooltip": "<p>Shows how many pieces of gear will be used in the search, after filters are applied.</p><p>If you notice, for example, that you only have 2 rings being used, try expanding your filters to use more ring options. Or if you see too much gear being used, reduce your {topResultPercentageLabel} filter to be more selective.</p><p><b>{numPermutationsLabel} - </b> Number of permutations of the filtered gear that need to be searched. Lowering this number will make searches faster, but will also yield less optimization results.</p><p><b>{numResultsSearchedLabel} - </b> The number of permutations the optimizer has currently gone through.</p><p><b>{numResultsLabel} - </b> The number of search results currrently found that satisfy the specified stat filters. A maximum number of results (Default: 5,000,000) can be produced before the search stops (due to memory limitations).</p>",
             "filteredWeaponsLabel": "Filtered weapons",
             "filteredHelmetsLabel": "Filtered helmets",
             "filteredArmorsLabel": "Filtered armors",
@@ -125,6 +140,7 @@
             "numResultsLabel": "Results",
 
             "optimizerActionsLabel": "Actions",
+            "optimizerActionsTooltip": "<p><b>{optimizerEquipBuildButtonText}/{optimizerUnequipBuildButtonText} - </b> Equips/Unequips the current selected gears onto your hero. The current build will automatically be saved.</p><p><b>{optimizerLockBuildButtonText}/{optimizerUnlockBuildButtonText} - </b> Locks/Unlocks the current selected gears that you want to be excluded from other searches.</p><p><b>{optimizerSelectAllBuildsButtonText}/{optimizerDeselectAllBuildsButtonText} - </b> Select/Deselects all the items. You can manually check/uncheck each checkbox as well.</p><p><b>{optimizerSaveBuildButtonText}/{optimizerRemoveBuildButtonText} - </b> Saves/Removes the currently selected row as a build. This will mark it with a star, and the build will be visible on the Heroes tab.</p><p>",
             "optimizerEquipBuildButtonText": "Equip",
             "optimizerUnequipBuildButtonText": "Unequip",
             "optimizerLockBuildButtonText": "Lock",
@@ -136,6 +152,7 @@
 
             "gearTabName": "Gear",
             "gearTableLabel": "Gear Table",
+            "gearTableTooltip": "<p>View and edit gears here. Multiple gears can be selected with Ctrl + click or Shift + click. The number of selected gear can be found in the top right corner.</p><p><b>{gearTableGearScoreLabel} - </b> Gear score. This score measures how well your gear rolled, scaled by the max roll for 85 gear (assuming 4 for speed). Similar to WSS, except flat stats rolls are included. Flat stats account to percentage equivalent was determined using the average stats of 5* units divided by the average flat roll. By this metric, a single flat roll corresponds to ~3.5 Atk %, ~5.0 Def %, ~3.1 Hp %.</p><code>{gearTableGearScoreLabel} = {statAttackPercentLabel}<br> + {statDefensePercentLabel}<br> + {statHealthPercentLabel}<br> + {statEffectivenessLabel}<br> + {statEffectResistanceLabel}<br> + {statSpeedLabel} * (8/4)<br> + {statCritDamageLabel} * (8/7)<br> + {statCritChanceLabel} * (8/5)<br> + {statFlatAttackLabel} * 3.46 / 39<br> + {statFlatDefenseLabel} * 4.99 / 31<br> + {statFlatHealthLabel} * 3.09 / 174</code><p><b>{gearTableDpsScoreLabel} - </b> Damage per Second Score. This is the Score formula but only counting Attack/%, Crit Chance, Crit Damage, and Speed.</p><p><b>{gearTableSupportScoreLabel} - </b> Support Score. This is the Score formula but only counting Hp/%, Defense/%, Effect Resist, and Speed.</p><p><b>{gearTableCombatScoreLabel} - </b> Combat Score. This is the Score formula excluding Effectiveness and Effect Resist.</p>",
             "numEquipmentSelectedLabel": "Selected: ",
 
             "gearTableSetLabel": "Set",
@@ -165,6 +182,7 @@
             "gearTableDuplicateLabel": "Duplicate",
 
             "gearActionsLabel": "Actions",
+            "gearActionsTooltip": "<p><b>{equipEditGearButtonText} - </b> Change an item's stats, level, or equip it onto someone.</p><p><b>{reforgeGearButtonText} - </b> Only works on +15 level 85 gears, predicts the item's reforged stats and generates the edited version.</p><p><b>{addNewGearButtonText} - </b> Manually create a new piece of gear with your specified main/substats and inputted values.</p><p><b>{duplicateGearButtonText} - </b> Create a copy of the selected item and lets you change its stats.</p><p><b>{removeGearButtonText} - </b> Unequips and then deletes the items. Multiple selection enabled.</p><p><b>{unequipGearButtonText} - </b> Unequips the items from their units. Multiple selection enabled.</p><p><b>{lockGearButtonText}/{unlockGearButtonText} - </b> Locks/Unlocks the items that you want to be excluded from searches.</p>",
             "equipEditGearButtonText": "Equip / Edit Item",
             "reforgeGearButtonText": "Reforge Item",
             "addNewGearButtonText": "Add New Item",
@@ -175,6 +193,7 @@
             "unlockGearButtonText": "Unlock Item(s)",
 
             "filtersLabel": "Filters",
+            "gearFiltersTooltip": "<p>Select filters to filter the gear table by. Only one filter is allowed per section for now.</p><p>Use the \"{selectDuplicatesButtonText}\" filter to find gear with the same stats, and remove if they were mistakenly added.</p>",
             "gearTypeLabel": "Gear",
             "gearMainStatsLabel": "Main Stats",
             "gearSubStatsLabel": "Sub Stats",
@@ -257,10 +276,6 @@
             "changeDataSaveLocButtonText": "Change saves folder",
             "themeDropdownLabel": "Theme",
             "languageDropdownLabel": "Language"
-        },
-        "dropdown": {
-            "selectAllOptionLabel": "[Select All]",
-            "noMatchesFoundOptionLabel": "No Matches Found"
         },
         "heroNames": {
             "Achates": "Achates",
