Add functionality to style elements through translation file, minor style changes to optimizer tab elements and fixed vertical scrollbar showing issue

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -2,7 +2,13 @@
     "name": "English",
     "locale": "en-US",
     "styles": {
-        "input": {
+        ".gearActionButton": {
+            "width": "126px"
+        },
+        "#selectDefaultFolderSubmit": {
+            "width": "140px"
+        },
+        "#importZarrocSaveFileSelect": {
             "width": "140px"
         }
     },
