Add text replacement to gear view panel as well as all toast notifications and popup dialogs (hopefully), add localization to ag grids, update translations and add artifact names

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -87,6 +87,7 @@
             "statCritChanceLabel": "Crit Chance",
             "statCritChancePercentLabel": "Crit Chance %",
             "statCritDamageLabel": "Crit Damage",
+            "statCritDmgLabel": "Crit Dmg",
             "statCritDmgPercentLabel": "Crit Dmg %",
             "statAttackLabel": "Attack",
             "statAttackPercentLabel": "Attack %",
@@ -97,12 +98,15 @@
             "statDefenseLabel": "Defense",
             "statDefensePercentLabel": "Defense %",
             "statFlatDefenseLabel": "Flat Defense",
+            "statEffLabel": "Eff",
             "statEffectivenessLabel": "Effectiveness",
             "statEffectivenessPercentLabel": "Effectiveness %",
+            "statEffResLabel": "Eff Res",
             "statEffectResistanceLabel": "Effect Resistance",
             "statEffectResistLabel": "Effect Resist",
             "statEffectResistPercentLabel": "Effect Resist %",
             "statSpeedLabel": "Speed",
+            "statDualAttackChance": "Dual Attack Chance",
 
             "gearSetsLabel": "Sets",
             "gearSetsTooltip": "<p>Choose the desired gear sets. Multiple options can be selected per slot. The first slot must be either only 4 piece or 2 piece sets.</p>",
@@ -187,6 +191,12 @@
             "gearTableLockedLabel": "Locked",
             "gearTableDuplicateLabel": "Duplicate",
 
+            "gearRankEpic": "Epic",
+            "gearRankHeroic": "Heroic",
+            "gearRankRare": "Rare",
+            "gearRankGood": "Good",
+            "gearRankNormal": "Normal",
+
             "gearActionsLabel": "Actions",
             "gearActionsTooltip": "<p><b>{equipEditGearButtonText} - </b> Change an item's stats, level, or equip it onto someone.</p><p><b>{reforgeGearButtonText} - </b> Only works on +15 level 85 gears, predicts the item's reforged stats and generates the edited version.</p><p><b>{addNewGearButtonText} - </b> Manually create a new piece of gear with your specified main/substats and inputted values.</p><p><b>{duplicateGearButtonText} - </b> Create a copy of the selected item and lets you change its stats.</p><p><b>{removeGearButtonText} - </b> Unequips and then deletes the items. Multiple selection enabled.</p><p><b>{unequipGearButtonText} - </b> Unequips the items from their units. Multiple selection enabled.</p><p><b>{lockGearButtonText}/{unlockGearButtonText} - </b> Locks/Unlocks the items that you want to be excluded from searches.</p>",
             "equipEditGearButtonText": "Equip / Edit Item",
@@ -237,7 +247,7 @@
 
             "importerTabName": "Importer",
             "gearScanTitle": "Loading gear automatically from the game",
-            "gearScanDesc": "  1. Install requirements from the instructions on Github\n  2. Leave your emulator open, and close {gameName}\n  3. Click '{startGearScanButtonText}'\n  4. Open {gameName} and load into the lobby\n  5. Click '{stopGearScanButtonText}'\n  6. Wait up to 30 secs, then once the data appears, click '{exportGearDataButtonText}' to save it to a \"{defaultGearFileName}\"  7. Import the \"{defaultGearFileName}\" file with the \"{replaceGearDataButtonText}\", \"{addGearDataButtonText}\", or \"{mergeGearDataButtonText}\" options below\n  8. Go to the Gear tab, and use the Level = 0 filter to manually fix any level 0 items",
+            "gearScanDesc": "1. Install requirements from the instructions on Github<br>2. Leave your emulator open, and close {gameName}<br>3. Click <b>{startGearScanButtonText}</b><br>4. Open {gameName} and load into the lobby<br>5. Click <b>{stopGearScanButtonText}</b><br>6. Wait up to 30 seconds, then once the data appears, click <b>{exportGearDataButtonText}</b> to save it to a \"{defaultGearFileName}\"<br>7. Import the \"{defaultGearFileName}\" file with either the <b>{replaceGearDataButtonText}</b>, <b>{addGearDataButtonText}</b>, or <b>{mergeGearDataButtonText}</b> options below<br>8. Go to the Gear tab and use the Level = 0 filter to manually fix any level 0 items",
             "allGearOptionText": "All",
             "plusThreeAboveGearOptionText": "+3 and up",
             "plusSixAboveGearOptionText": "+6 and up",
@@ -249,7 +259,7 @@
             "exportGearDataButtonText": "Export",
 
             "importGearDataTitle": "Importing gear data",
-            "importGearDataDesc": "After \"{defaultGearFileName}\" is created, choose one of the following ways to import your gear, then select your \"{defaultGearFileName}\" file.\nUse '{replaceGearDataButtonText}' to completely replace any and all existing gear with your new gear screenshots. This will wipe existing heroes.\nUse '{addGearDataButtonText}' to add your new gear screenshots to your current list of gear. This does not wipe your heroes.\nUse '{mergeGearDataButtonText}' to combine your new gear screenshots with your currently loaded gear.\nMerging replaces your old items with new items, while keeping your heroes' equipped gear and builds intact.\nThis is useful for people who re-screenshot all their gear, and want to keep all their hero settings.",
+            "importGearDataDesc": "After \"{defaultGearFileName}\" is created, choose one of the following ways to import your gear, then select your \"{defaultGearFileName}\" file.<br>Use <b>{replaceGearDataButtonText}</b> to completely replace any and all existing gear with your new gear screenshots. This will wipe existing heroes.<br>Use <b>{addGearDataButtonText}</b> to add your new gear screenshots to your current list of gear. This does not wipe your heroes.<br>Use <b>{mergeGearDataButtonText}</b> to combine your new gear screenshots with your currently loaded gear.<br>Merging replaces your old items with new items, while keeping your heroes' equipped gear and builds intact.<br>This is useful for people who re-screenshot all their gear, and want to keep all their hero settings.",
             "replaceGearDataButtonText": "Replace data",
             "addGearDataButtonText": "Add new data",
             "mergeGearDataButtonText": "Merge data",
@@ -281,7 +291,234 @@
             "maxNumOptimizationResultsText": "Maximum optimization results (Recommended: 5,000,000, Min: 10k, Max: 100m)",
             "changeDataSaveLocButtonText": "Change saves folder",
             "themeDropdownLabel": "Theme",
-            "languageDropdownLabel": "Language"
+            "languageDropdownLabel": "Language",
+
+            "gearReforgeTypeHunt": "Hunt",
+            "gearReforgeTypeEquipmentConversion": "Conversion",
+            "gearTypeWeapon": "Weapon",
+            "gearTypeHelmet": "Helmet",
+            "gearTypeArmor": "Armor",
+            "gearTypeNecklace": "Necklace",
+            "gearTypeRing": "Ring",
+            "gearTypeBoots": "Boots",
+
+            "tableNoRowsToShow": "No Rows To Show",
+            "tablePage": "Page",
+            "tableTo": "to",
+            "tableOf": "of",
+            "tableNextPage": "Next Page",
+            "tablePreviousPage": "Previous Page",
+            "tableFirstPage": "First Page",
+            "tableLastPage": "Last Page",
+
+            "notifyUseStatPriority": "No stat priority selected. For best results, use the stat priority filter.",
+            "popupErrorStatPriority100": "Stat priority was selected but the filter is set to Top 100%. The stat priority filter is only useful when the % is not 100.",
+            "popupErrorAssignStatPriorities": "Top % was selected but no stat priorities are assigned. Assign stat priorities otherwise the filter will not work.",
+            "notifySelectGearSets": "No sets were selected. For best results, select at least one set.",
+            "popupErrorInvalidDefenseFilter": "Your minimum defense filter is over 10,000, did you mean HP?",
+            "notifySelectAccessoryMainStats": "No accessory main stats were selected. For best results, use the main stat filter to narrow down the search.",
+            "notifyLargePermutationAmount": "Over 5 billion permutations selected. For faster results, try applying stricter filters or using a lower Top N%.",
+            "popupErrorResultLimitSearchTermination": "Search terminated after the result limit was exceeded, the full results are not shown. Please apply more filters to narrow your search.",
+            "popupErrorIncorrectSetFilterOrder": "Invalid sets, fill in the set filters from top to bottom.",
+            "popupErrorInvalidSetsSelected": "Invalid sets, the first set filter must be either all 4 piece or all 2 piece sets.",
+
+            "notifyGearAdded": "Added item",
+            "notifyGearEdited": "Edited item",
+            "notifyGearReforged": "Reforged item",
+            "notifyGearRemoved": "Removed [number] item(s).",
+            "notifyGearUnequipped": "Unequipped [number] item(s).",
+            "notifyGearLocked": "Locked item",
+            "notifyMultipleGearsLocked": "Locked [number] item(s).",
+            "notifyGearUnlocked": "Unlocked item",
+            "notifyMultipleGearsUnlocked": "Unlocked [number] item(s).",
+            "notifyWarnNoGearSelectedToEdit": "Select one item to edit.",
+            "notifyWarnNoGearSelectedToReforge": "Select one item to reforge.",
+            "notifyWarnInvalidGearToReforge": "Only +15 level 85 gear can be reforged.",
+            "notifyWarnGavaleetCannotBeReforged": "Abyss lifesteal set (Gaveleet's) cannot be reforged",
+            "notifyWarnNoGearSelectedToDuplicate": "Select one item to duplicate.",
+
+            "dropdownNobodyPlaceholder": "Nobody",
+            "dropdownNonePlaceholder": "None",
+			
+            "editGearEquippedToLabel": "Equipped",
+            "editGearTypeLabel": "Type",
+            "editGearReforgeLabel": "Reforge",
+            "editGearMainStatLabel": "Main Stat",
+            "editGearSubstat1Label": "Substat 1",
+            "editGearSubstat2Label": "Substat 2",
+            "editGearSubstat3Label": "Substat 3",
+            "editGearSubstat4Label": "Substat 4",
+
+            "artifactLabel": "Artifact",
+            "artifactLevelLabel": "Level",
+            "imprintConcentrationLabel": "Imprint",
+            "exclusiveEquipmentLabel": "EE",
+            "addAdditionalBonusStatsTitle": "Add any other stats not included above",
+
+            "editBuildNamePopupLabel": "Build Name",
+
+            "notifyWarnBuildNotSelectedForEdit": "Select a build to edit.",
+            "notifyWarnBuildNotComplete": "Hero needs a 6 item build before it can be saved",
+            "notifyBonusStatsSaved": "Saved bonus stats",
+            "notifyEatonAdditionalStats": "Eaton's 20% total Health bonus from S2 is already automatically added.",
+            "notifyGuntherAdditionalStats": "Gunther's 75% total Attack bonus from S2 is already automatically added.",
+            "notifyLenaAdditionalStats": "Lena's 50% Crit Chance bonus from S2 is already automatically added.",
+            "notifyARaviAdditionalStats": "Apocalypse Ravi's 30% Crit Chance bonus from S2 is already automatically added."
+        },
+        "artifactNames": {
+            "A Little Queen's Huge Crown": "A Little Queen's Huge Crown",
+            "A Song for Everybody": "A Song for Everybody",
+            "A Symbol of Unity": "A Symbol of Unity",
+            "Abyssal Crown": "Abyssal Crown",
+            "Adamant Shield": "Adamant Shield",
+            "Alabastron": "Alabastron",
+            "Alencinox's Wrath": "Alencinox's Wrath",
+            "Alexa's Basket": "Alexa's Basket",
+            "Alsacian Spear": "Alsacian Spear",
+            "Ambrote": "Ambrote",
+            "Ancient Dragon's Legacy": "Ancient Dragon's Legacy",
+            "Ancient Sheath": "Ancient Sheath",
+            "Andre's Crossbow": "Andre's Crossbow",
+            "Aqua Rose": "Aqua Rose",
+            "Ascending Axe": "Ascending Axe",
+            "Atma's Portal": "Atma's Portal",
+            "Aurius": "Aurius",
+            "Barthez's Orbuculum": "Barthez's Orbuculum",
+            "Bastion of Perlutia": "Bastion of Perlutia",
+            "Biting Wind Star": "Biting Wind Star",
+            "Black Hand of the Goddess": "Black Hand of the Goddess",
+            "Blessings of Camaraderie": "Blessings of Camaraderie",
+            "Bloodbead Dagger": "Bloodbead Dagger",
+            "Bloodstone": "Bloodstone",
+            "Bloody Rose": "Bloody Rose",
+            "Border Coin": "Border Coin",
+            "Butterfly Mandolin": "Butterfly Mandolin",
+            "Card of Small Miracles": "Card of Small Miracles",
+            "Celestine": "Celestine",
+            "Champion's Trophy": "Champion's Trophy",
+            "Chatty": "Chatty",
+            "Circus Fantasia": "Circus Fantasia",
+            "Cradle of Life": "Cradle of Life",
+            "Creation and Destruction": "Creation and Destruction",
+            "Crimson Moon of Nightmares": "Crimson Moon of Nightmares",
+            "Crimson Seed": "Crimson Seed",
+            "Crown of Glory": "Crown of Glory",
+            "Cursed Compass": "Cursed Compass",
+            "Daydream Joker": "Days of Destiny",
+            "Deadly Sword": "Deadly Sword",
+            "Demon's Pistol": "Demon's Pistol",
+            "Devil's Brand": "Devil's Brand",
+            "Dignus Orb": "Dignus Orb",
+            "Doctor's Bag": "Doctor's Bag",
+            "Double-Edged Decrescent": "Double-Edged Decrescent",
+            "Draco Plate": "Draco Plate",
+            "Dream Scroll": "Dream Scroll",
+            "Durandal": "Durandal",
+            "Dust Devil": "Dust Devil",
+            "Dux Noctis": "Dux Noctis",
+            "Egg of Delusion": "Egg of Delusion",
+            "El's Fist": "El's Fist",
+            "Elbris Ritual Sword": "Elbris Ritual Sword",
+            "Elf's Bow": "Elf's Bow",
+            "Elyha's Knife": "Elyha's Knife",
+            "Enhanced Gauntlet": "Enhanced Gauntlet",
+            "Envoy's Pipe": "Envoy's Pipe",
+            "Eternus": "Eternus",
+            "Etica's Scepter": "Etica's Scepter",
+            "Exorcist's Tonfa": "Exorcist's Tonfa",
+            "Fairy Tale for a Nightmare": "Fairy Tale for a Nightmare",
+            "Fairy's Grimoire": "Fairy's Grimoire",
+            "Firm Shield": "Firm Shield",
+            "Flower Shower": "Flower Shower",
+            "Forest Totem": "Forest Totem",
+            "Goblin's Lamp": "Goblin's Lamp",
+            "Golden Cocoa Cookie": "Golden Cocoa Cookie",
+            "Grail of Blood": "Grail of Blood",
+            "Guiding Light": "Guiding Light",
+            "Hell Cutter": "Hell Cutter",
+            "Hilag Lance": "Hilag Lance",
+            "Holy Sacrifice": "Holy Sacrifice",
+            "Idol's Cheer": "Idol's Cheer",
+            "Iela Violin": "Iela Violin",
+            "Infinity Basket": "Infinity Basket",
+            "Iron Fan": "Iron Fan",
+            "Junkyard Dog": "Junkyard Dog",
+            "Justice for All": "Justice for All",
+            "Kal'adra": "Kal'adra",
+            "Knowledge Seed": "Knowledge Seed",
+            "Labyrinth Cube": "Labyrinth Cube",
+            "Last Teatime": "Last Teatime",
+            "Love Potion": "Love Potion",
+            "Magahara's Tome": "Magahara's Tome",
+            "Manica of Control": "Manica of Control",
+            "Merciless Glutton": "Merciless Glutton",
+            "Midnight Bloom": "Midnight Bloom",
+            "Mighty Yaksha": "Mighty Yaksha",
+            "Moonlight Dreamblade": "Moonlight Dreamblade",
+            "Moonlight's Vestige": "Moonlight's Vestige",
+            "Ms. Confille": "Ms. Confille",
+            "Necro and Undine": "Necro and Undine",
+            "New Year Cookies": "New Year Cookies",
+            "Noble Oath": "Noble Oath",
+            "Oath Key": "Oath Key",
+            "One Year of Gratitude": "One Year of Gratitude",
+            "Otherworldly Machinery": "Otherworldly Machinery",
+            "Portait of the Saviors": "Proof of Valor",
+            "Prophetic Candlestick": "Prophetic Candlestick",
+            "Radiant Forever": "Radiant Forever",
+            "Rainbow Scale": "Rainbow Scale",
+            "Ranon's Memorandum": "Ranon's Memorandum",
+            "Reingar's Special Drink": "Reingar's Special Drink",
+            "Resolute Soldier Series": "Rhianna & Luciella",
+            "Rise of a Monarch": "Rise of a Monarch",
+            "Rod of Amaryllis": "Rod of Amaryllis",
+            "Rosa Hargana": "Rosa Hargana",
+            "Samsara Prayer Beads": "Samsara Prayer Beads",
+            "Santa Muerte": "Santa Muerte",
+            "Sashe Ithanes": "Sasshe Ithanes",
+            "Secret Art - Storm Sword": "Secret Art - Storm Sword",
+            "Sepulcrum": "Sepulcrum",
+            "Shepherd of the Hollow": "Shepherd of the Hollow",
+            "Shepherds of Chaos": "Shepherds of Chaos",
+            "Shimadra Staff": "Sigurd Scythe",
+            "Silver Rain": "Silver Rain",
+            "Sira-Ren": "Sira-Ren",
+            "Snow Crystal": "Snow Crystal",
+            "Song of Stars": "Song of Stars",
+            "Spirit's Breath": "Spirit's Breath",
+            "Spooky Solayu Stories": "Spooky Solayu Stories",
+            "Staff of Wisdom": "Staff of Wisdom",
+            "Steadfast Gatekeeper": "Steadfast Gatekeeper",
+            "Stella Harpa": "Stella Harpa",
+            "Strak Gauntlet": "Strak Gauntlet",
+            "Sword of Ezera": "Sword of Ezera",
+            "Sword of Judgement": "Sword of Judgement",
+            "Sword of Summer Twilight": "Sword of Summer Twilight",
+            "Sword of the Morning": "Sword of the Morning",
+            "Sword of the Sun": "Sword of the Sun",
+            "Tagehel's Ancient Book": "Tagehel's Ancient Book",
+            "Tear of the Desert": "Tear of the Desert",
+            "The Guardian Star's Blessing": "The Guardian Star's Blessing",
+            "Time Matter": "Time Matter",
+            "Timeless Anchor": "Timeless Anchor",
+            "To a New World": "To a New World",
+            "Torn Sleeve": "Torn Sleeve",
+            "Touch of Rekos": "Touch of Rekos",
+            "Twilight Calamity": "Twilight Calamity",
+            "Uberius's Tooth": "Uberius's Tooth",
+            "Unfading Memories": "Unfading Memories",
+            "Unseen Observer": "Unseen Observer",
+            "Venus Orb": "Venus Orb",
+            "Victorius Flag": "Victorius Flag",
+            "Violet Talisman": "Violet Talisman",
+            "Wall of Order": "Wall of Order",
+            "Water's Orgin": "Water's Origin",
+            "Wind Rider": "Wind Rider",
+            "Wondrous Potion Vial": "Wondrous Potion Vial",
+            "XIII. Death": "XIII. Death",
+            "XIV. Temperance": "XIV. Temperance",
+            "XVI. The Tower": "XVI. The Tower",
+            "XVIII. The Moon": "XVIII. The Moon"
         },
         "heroNames": {
             "Achates": "Achates",
@@ -355,6 +592,7 @@
             "Dominiel": "Dominiel",
             "Doris": "Doris",
             "Eaton": "Eaton",
+            "Eda": "Eda",
             "Elena": "Elena",
             "Elphelt Valentine": "Elphelt Valentine",
             "Elson": "Elson",
@@ -372,6 +610,7 @@
             "Glenn": "Glenn",
             "Gloomyrain": "Gloomyrain",
             "Godmother": "Godmother",
+            "Great Chief Khawana": "Great Chief Khawana",
             "Guider Aither": "Guider Aither",
             "Gunther": "Gunther",
             "Haste": "Haste",
