Fix text replacement of <p> tags in the Importer Tab, add missing artifacts to translation file

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -388,6 +388,7 @@
             "Biting Wind Star": "Biting Wind Star",
             "Black Hand of the Goddess": "Black Hand of the Goddess",
             "Blessings of Camaraderie": "Blessings of Camaraderie",
+            "Blood-Seared Moon": "Blood-Seared Moon",
             "Bloodbead Dagger": "Bloodbead Dagger",
             "Bloodstone": "Bloodstone",
             "Bloody Rose": "Bloody Rose",
@@ -491,6 +492,8 @@
             "Steadfast Gatekeeper": "Steadfast Gatekeeper",
             "Stella Harpa": "Stella Harpa",
             "Strak Gauntlet": "Strak Gauntlet",
+            "Succubus Mirror": "Succubus Mirror",
+            "Super Duper Water Gun Shooter": "Super Duper Water Gun Shooter",
             "Sword of Ezera": "Sword of Ezera",
             "Sword of Judgement": "Sword of Judgement",
             "Sword of Summer Twilight": "Sword of Summer Twilight",
